tests/compile_fail/add_length_to_time.stderr
warning: unused import: `whippyunits::*`
 --> tests/compile_fail/add_length_to_time.rs:2:5
  |
2 | use whippyunits::*;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/compile_fail/add_length_to_time.rs:10:28
   |
10 |     let _result = length + time;
   |                            ^^^^ expected `1`, found `0`
   |
   = note: expected struct `Quantity<0, 0, 1, 0, 0, 0, 0, 0>`
              found struct `Quantity<0, 0, 0, 0, 1, 0, 0, 0>`
